crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__super__call_same_method.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/super/call_same_method.lox
---
success: true
exit_code: 0
----- stdout -----
Derived.foo()
Base.foo()

----- stderr -----
