crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__super__closure.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/super/closure.lox
---
success: true
exit_code: 0
----- stdout -----
Base

----- stderr -----
