crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__super__constructor.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/super/constructor.lox
---
success: true
exit_code: 0
----- stdout -----
Derived.init()
Base.init(a, b)

----- stderr -----
