crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__super__no_superclass_bind.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/super/no_superclass_bind.lox
---
success: false
exit_code: 65
----- stdout -----

----- stderr -----
Error: Can’t use `super` in a class with no bases.
   ╭─[craftinginterpreters/test/super/no_superclass_bind.lox:3:5]
   │
 3 │     super.doesNotExist; // Error at 'super': Can't use 'super' in a class with no superclass.
   │     ─────  
───╯
