crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__super__no_superclass_method.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/super/no_superclass_method.lox
---
success: false
exit_code: 70
----- stdout -----

----- stderr -----
Error: undefined super property `doesNotExist` of value `<Derived instance at [POINTER]>`
   ╭─[craftinginterpreters/test/super/no_superclass_method.lox:5:5]
   │
 5 │     super.doesNotExist(1); // expect runtime error: Undefined property 'doesNotExist'.
   │     ───── ────────────  
───╯
