crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__super__parenthesized.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/super/parenthesized.lox
---
success: false
exit_code: 65
----- stdout -----

----- stderr -----
Error: at `)`: expected Dot
   ╭─[craftinginterpreters/test/super/parenthesized.lox:8:11]
   │
 8 │     (super).method();
   │           ─  
───╯
