crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__super__reassign_superclass.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/super/reassign_superclass.lox
---
success: true
exit_code: 0
----- stdout -----
Base.method()
Base.method()

----- stderr -----
