crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__super__super_at_top_level.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/super/super_at_top_level.lox
---
success: false
exit_code: 65
----- stdout -----

----- stderr -----
Error: Can’t use `super` outside of class.
   ╭─[craftinginterpreters/test/super/super_at_top_level.lox:1:1]
   │
 1 │ super.foo("bar"); // Error at 'super': Can't use 'super' outside of a class.
   │ ─────  
───╯
